--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+base64 = "0.13"
 chrono = "0.4.38"
-reqwest = { version = "0.12.4", features = ["blocking", "json"] }
+jsonwebtoken = "8.1"
+regex = "1.10.4"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+visdom = "1.0.0"
