--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.13"
 chrono = "0.4.38"
 jsonwebtoken = "8.1"
 regex = "1.10.4"
+rustls = "0.22.4"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.203", features = ["derive"] }
