--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-web = "4"
 base64 = "0.13"
 chrono = "0.4.38"
+chrono-tz = "0.9.0"
 jsonwebtoken = "8.1"
 regex = "1.10.4"
 rustls = "0.22.4"
